--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
       <div class="item-1">
         <div>
           <img src="./images/image-jeremy.png" alt="profile-image" />
-          <span>Report for</span>
-          <h1>Jeremy Robson</h1>
+          <div>
+            <span>Report for</span>
+            <h1>Jeremy Robson</h1>
+          </div>
         </div>
         <div>
           <span>Daily</span>
-          <span class="active">Weekly</span>
+          <span>Weekly</span>
           <span>Monthly</span>
         </div>
       </div>
@@ -35,8 +37,8 @@
             <span>Work</span>
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
-          <div class="time"><span>32</span>hrs</div>
-          <div class="last-week">Last Week - <span>36</span>hrs</div>
+          <div class="time"><span></span>hrs</div>
+          <div class="last-week">Last Week - <span></span>hrs</div>
         </div>
       </div>
       <div class="item item-3">
@@ -45,8 +47,8 @@
             <span>Play</span>
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
-          <div class="time"><span>32</span>hrs</div>
-          <div class="last-week">Last Week - <span>36</span>hrs</div>
+          <div class="time"><span></span>hrs</div>
+          <div class="last-week">Last Week - <span></span>hrs</div>
         </div>
       </div>
       <div class="item item-4">
@@ -55,8 +57,8 @@
             <span>Study</span>
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
-          <div class="time"><span>32</span>hrs</div>
-          <div class="last-week">Last Week - <span>36</span>hrs</div>
+          <div class="time"><span></span>hrs</div>
+          <div class="last-week">Last Week - <span></span>hrs</div>
         </div>
       </div>
       <div class="item item-5">
@@ -65,8 +67,8 @@
             <span>Exercise</span>
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
-          <div class="time"><span>32</span>hrs</div>
-          <div class="last-week">Last Week - <span>36</span>hrs</div>
+          <div class="time"><span></span>hrs</div>
+          <div class="last-week">Last Week - <span></span>hrs</div>
         </div>
       </div>
       <div class="item item-6">
@@ -75,8 +77,8 @@
             <span>Social</span>
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
-          <div class="time"><span>32</span>hrs</div>
-          <div class="last-week">Last Week - <span>36</span>hrs</div>
+          <div class="time"><span></span>hrs</div>
+          <div class="last-week">Last Week - <span></span>hrs</div>
         </div>
       </div>
       <div class="item item-7">
@@ -85,8 +87,8 @@
             <span>Self Care</span>
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
-          <div class="time"><span>32</span>hrs</div>
-          <div class="last-week">Last Week - <span>36</span>hrs</div>
+          <div class="time"><span></span>hrs</div>
+          <div class="last-week">Last Week - <span></span>hrs</div>
         </div>
       </div>
     </div>
