--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
           <div class="time"><span></span>hrs</div>
-          <div class="last-week">Last Week - <span></span>hrs</div>
+          <div class="last-time">Last <span></span> - <span></span>hrs</div>
         </div>
       </div>
       <div class="item item-3">
@@ -48,7 +48,7 @@
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
           <div class="time"><span></span>hrs</div>
-          <div class="last-week">Last Week - <span></span>hrs</div>
+          <div class="last-time">Last <span></span> - <span></span>hrs</div>
         </div>
       </div>
       <div class="item item-4">
@@ -58,7 +58,7 @@
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
           <div class="time"><span></span>hrs</div>
-          <div class="last-week">Last Week - <span></span>hrs</div>
+          <div class="last-time">Last <span></span> - <span></span>hrs</div>
         </div>
       </div>
       <div class="item item-5">
@@ -68,7 +68,7 @@
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
           <div class="time"><span></span>hrs</div>
-          <div class="last-week">Last Week - <span></span>hrs</div>
+          <div class="last-time">Last <span></span> - <span></span>hrs</div>
         </div>
       </div>
       <div class="item item-6">
@@ -78,7 +78,7 @@
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
           <div class="time"><span></span>hrs</div>
-          <div class="last-week">Last Week - <span></span>hrs</div>
+          <div class="last-time">Last <span></span> - <span></span>hrs</div>
         </div>
       </div>
       <div class="item item-7">
@@ -88,7 +88,7 @@
             <img src="./images/icon-ellipsis.svg" alt="icon-ellipsis" />
           </div>
           <div class="time"><span></span>hrs</div>
-          <div class="last-week">Last Week - <span></span>hrs</div>
+          <div class="last-time">Last <span></span> - <span></span>hrs</div>
         </div>
       </div>
     </div>
